# Embedded-GUI-Framework

./: CMakeLists.txt  README.md  library.json  library.properties
examples/: form_example.ino  simple_menu_with_button.ino  simple_menu_with_grid.ino  simple_menu_with_nested_grids.ino  simple_menu_with_sub_menu.ino
include/: GUI.h
src/: GUI.h  GUI_Bitmap.cpp  GUI_Bitmap.h  GUI_Button.cpp  GUI_Button.h  GUI_Colours.cpp  GUI_Colours.h  GUI_Definitions.h  GUI_Element.cpp  GUI_Element.h  GUI_Form.cpp  GUI_Form.h  GUI_Grid.cpp  GUI_Grid.h  GUI_Image.cpp  GUI_Image.h  GUI_Label.cpp  GUI_Label.h  GUI_Menu.cpp  GUI_Menu.h  GUI_View.cpp  GUI_View.h  display_driver.h  platform.h
src/drivers/: Adafruit_GFX_driver.cpp  Adafruit_GFX_driver.h  display_driver.h
src/drivers/Adafruit_GFX/: Adafruit_GFX_driver.cpp  Adafruit_GFX_driver.h
src/drivers/SDL3/: SDL3_driver.cpp  SDL3_driver.h
